# cedar

./: .gitignore  Cargo.toml  README.md  distance.phylip
src/: cli.rs  dist.rs  main.rs  sketch.rs  utils.rs
test/: GCA_000005845.fna.xz  GCA_000006765.fna.bz2  test.fq
test/sketches/: GCA_000005845.fna.msh  GCA_000006765.fna.msh  bacam.fna.msh  bacsp.fna.msh
treetrust/: GCA_000005845.fna.xz.msh  GCA_000006765.fna.bz2.msh  GCF_000009265.fna.gz.msh  GCF_000009265.fna.msh
