[package]
name = "darwin"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Ebedthan/darwin"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4", features = ["cargo"] }
finch = "0.6.0"
itertools = "0.12.1"
speedytree = "0.1.0"
rayon = "1"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
debug = true
overflow-checks = false
lto = 'thin'
panic = 'abort'
incremental = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "darwin"
path = "src/main.rs"
bench = false

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = "github"
# Which actions to run on pull requests
pr-run-mode = "plan"
